# hype-backtesting

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  run_backtest.py
config/: settings.yaml
dashboard/: package.json  tsconfig.json
dashboard/src/components/: EquityChart.tsx  PositionTable.tsx  RiskPanel.tsx
dashboard/src/hooks/: usePortfolio.ts
dashboard/src/types/: index.ts
notebooks/: microstructure_analysis.ipynb
research/: run_hip3_analysis.py
risk-engine/: Cargo.toml
risk-engine/src/: main.rs
scripts/: deploy.sh  run_backtest.sh
services/ingest/: go.mod  main.go
sql/: analytics.sql  schema.sql
src/analytics/: __init__.py  metrics.py  visualization.py
src/data/: __init__.py  equities.py  hyperliquid.py
src/engine/: __init__.py  backtest.py  portfolio.py
src/research/: microstructure.py
src/strategies/: __init__.py  adaptive_regime.py  base.py  basis_reversion.py  basis_trade.py  funding_arb.py  funding_carry.py  hip3_yield.py  mean_reversion.py  momentum.py  pairs_spacex.py  relative_strength.py  volatility_breakout.py  weekend_reopen.py
tests/: test_engine.py  test_strategies.py
