[package]
name = "risk-engine"
version = "0.1.0"
edition = "2021"
description = "High-performance portfolio risk engine -- real-time VaR, Greeks, and position limits"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
nalgebra = "0.32"
statrs = "0.16"
redis = { version = "0.23", features = ["tokio-comp"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
